bldg_plans: Added Versatile Framework to Assembler. BldgPlan: Added new substruct OCRateBounds and reconfigured various methods to use it in lieu of maxOCRate. Schema: Added minOCRate to TestSpec. Program: Minor changes to use OCRateBounds and facilitate minOCRate.

--- a/Data/bldg_plans.cfg
+++ b/Data/bldg_plans.cfg
@@ -165,7 +165,7 @@ PLAN
 	name = Assembler
 	basePower = 15
 	rateMultiplier = 1
-	buildList = "Reinforced Iron Plate", Rotor, "Modular Frame", "Encased Industrial Beam", Stator, Motor, "Circuit Board", "A.I. Limiter", "Automated Wiring", "Smart Plating", "Alclad Aluminum Sheet", "Heat Sink", "Encased Uranium Cell", "Electromagnetic Control Rod", "Heat Exchanger"
+	buildList = "Reinforced Iron Plate", Rotor, "Modular Frame", "Encased Industrial Beam", Stator, Motor, "Circuit Board", "A.I. Limiter", "Automated Wiring", "Smart Plating", "Alclad Aluminum Sheet", "Heat Sink", "Encased Uranium Cell", "Electromagnetic Control Rod", "Heat Exchanger", "Versatile Framework"
 	COSTS
 	{
 		PART
