--- a/TestSpec.cfg
+++ b/TestSpec.cfg
@@ -3,18 +3,31 @@
 	CONDITIONS
 	{
 		ignoreCosts = true
-		ignorePower = false
-		maxOCRate = 1.1
+		ignorePower = true
+		maxOCRate = 1.0
 		rcpMarginFactor = 0.01
 		allowDemandPreference = true
+		ignoreRecipes = "Casted Screw", "Caterium Wire"
 	}
 
 	PART_TARGET
 	{
-		name = "Turbo Motor"
+		name = "Reinforced Iron Plate"
 	}
 	PART_TARGET
 	{
-		name = "Heavy Modular Frame"
+		name = "Versatile Framework"
+	}
+	PART_TARGET
+	{
+		name = "Automated Wiring"
+	}
+	PART_TARGET
+	{
+		name = "Modular Frame"
+	}
+	PART_TARGET
+	{
+		name = "Rotor"
 	}
 }
