BldgPlan: Added a skip to the priority recipe search to prevent prescribed buildings from being duplicated. recipe_list: Changed the plural for all cases of Heavy Oil Residue to blank.

--- a/Data/recipe_list.cfg
+++ b/Data/recipe_list.cfg
@@ -865,7 +865,7 @@ RECIPE
 		PART
 		{
 			name = "Heavy Oil Residue"
-			plural = s
+			plural = ""
 			rate = 10
 		}
 	}
@@ -895,7 +895,7 @@ RECIPE
 		PART
 		{
 			name = "Heavy Oil Residue"
-			plural = s
+			plural = ""
 			rate = 20
 		}
 	}
@@ -1012,7 +1012,7 @@ RECIPE
 		PART
 		{
 			name = "Heavy Oil Residue"
-			plural = s
+			plural = ""
 			rate = 60
 		}
 	}
@@ -1066,7 +1066,7 @@ RECIPE
 		PART
 		{
 			name = "Heavy Oil Residue"
-			plural = s
+			plural = ""
 			rate = 40
 		}
 	}
