bldg_plans.cfg: recipe_list.cfg: * Added Bolted Frame, Wet Concrete, Steamed Copper Sheet, Infused Uranium Cell. TestSpec.cfg: Stuff BldgPlan.cs: Various changes aimed at better use of byproducts and resilience to cfg deficiencies. Building.cs: CountLikeBuildings improved to allow sorting by part generation. Part.cs: Allow public setter for rate. Production.cs: Added GetNetProductionOf methods. Recipe.cs: * Tweaks to TryFindRecipeFor aimed at better use of byproducts. * Added GetDemandRate methods. * Added HasDemand methods. * Enabled caching of recipe generations. Utils.cs: Added min() Program.cs: Added start of JSON reader for datamining.

--- a/Data/bldg_plans.cfg
+++ b/Data/bldg_plans.cfg
@@ -165,7 +165,7 @@ PLAN
 	name = Assembler
 	basePower = 15
 	rateMultiplier = 1
-	buildList = "Reinforced Iron Plate", Rotor, "Modular Frame", "Encased Industrial Beam", Stator, Motor, "Circuit Board", "A.I. Limiter", "Automated Wiring", "Smart Plating", "Alclad Aluminum Sheet", "Heat Sink", "Encased Uranium Cell", "Electromagnetic Control Rod", "Heat Exchanger", "Versatile Framework"
+	buildList = "Reinforced Iron Plate", Rotor, "Modular Frame", "Encased Industrial Beam", Stator, Motor, "Circuit Board", "A.I. Limiter", "Automated Wiring", "Smart Plating", "Alclad Aluminum Sheet", "Heat Sink", "Encased Uranium Cell", "Electromagnetic Control Rod", "Heat Exchanger", "Versatile Framework", "Bolted Frame"
 	COSTS
 	{
 		PART
@@ -194,7 +194,7 @@ PLAN
 	name = Manufacturer
 	basePower = 55
 	rateMultiplier = 1
-	buildList = "Heavy Modular Frame", Computer, "Crystal Oscillator", "Radio Control Unit", "Turbo Motor", "Nuclear Fuel Rod"
+	buildList = "Heavy Modular Frame", Computer, "Crystal Oscillator", "Radio Control Unit", "Turbo Motor", "Nuclear Fuel Rod", "Infused Uranium Cell", "Adaptive Control Unit", "Modular Engine"
 	COSTS
 	{
 		PART
@@ -287,7 +287,7 @@ PLAN
 	name = Refinery
 	basePower = 30
 	rateMultiplier = 1
-	buildList = Plastic, Rubber, Fuel, "Residual Fuel", "Residual Rubber", "Alumina Solution", "Aluminum Scrap", "Petroleum Coke", "Sulfuric Acid", "Uranium Pellet"
+	buildList = Plastic, Rubber, Fuel, "Residual Fuel", "Residual Rubber", "Alumina Solution", "Aluminum Scrap", "Petroleum Coke", "Sulfuric Acid", "Uranium Pellet", "Wet Concrete", "Steamed Copper Sheet"
 	COSTS
 	{
 		PART
@@ -317,20 +317,49 @@ PLAN
 	}
 }
 
+/*GENR
+{
+	name = "Biomass Burner"
+	basePower = 30
+	rateMultiplier = 1
+	fuelClass = BioSolids
+
+	COSTS
+	{
+		PART
+		{
+			name = "Iron Plate"
+			rate = 15
+		}
+		PART
+		{
+			name = "Iron Rod"
+			rate = 15
+		}
+		PART
+		{
+			name = Wire
+			rate = 25
+		}
+	}
+}*/
+
 GENR
 {
 	name = "Fuel Generator"
 	basePower = 150
 	rateMultiplier = 1
+	fuelClass = LiquidFuels
+
 	FUEL
 	{
 		PART
 		{
-			name = Fuel
-			plural = ""
+			name = "Fuel"
 			rate = 15
 		}
 	}
+
 	COSTS
 	{
 		PART
@@ -365,3 +394,40 @@ GENR
 		}
 	}
 }
+
+/*GENR
+{
+	name = "Nuclear Power Plant"
+	basePower = 2500
+	rateMultiplier = 1
+	fuelClass = Nuclear
+
+	COSTS
+	{
+		PART
+		{
+			name = Concrete
+			rate = 150
+		}
+		PART
+		{
+			name = "Heavy Modular Frame"
+			rate = 10
+		}
+		PART
+		{
+			name = Supercomputer
+			rate = 5
+		}
+		PART
+		{
+			name = Cable
+			rate = 50
+		}
+		PART
+		{
+			name = "High-Speed Connector"
+			rate = 15
+		}
+	}
+}*/
