--- a/Data/recipe_list.cfg
+++ b/Data/recipe_list.cfg
@@ -468,6 +468,36 @@ RECIPE
 
 RECIPE
 {
+	name = "Bolted Frame"
+	plural = s
+	PRODUCTION
+	{
+		PART
+		{
+			name = "Modular Frame"
+			plural = s
+			rate = 5
+		}
+	}
+	DEMANDS
+	{
+		PART
+		{
+			name = "Reinforced Iron Plate"
+			plural = s
+			rate = 7.5
+		}
+		PART
+		{
+			name = "Screw"
+			plural = s
+			rate = 140
+		}
+	}
+}
+
+RECIPE
+{
 	name = Wire
 	plural = s
 	PRODUCTION
@@ -829,6 +859,62 @@ RECIPE
 	}
 	DEMANDS
 	{
+	}
+}
+
+RECIPE
+{
+	name = "Wet Concrete"
+	plural = ""
+	
+	PRODUCTION
+	{
+		PART
+		{
+			name = Concrete
+			rate = 80
+		}
+	}
+	DEMANDS
+	{
+		PART
+		{
+			name = Limestone
+			rate = 120
+		}
+		PART
+		{
+			name = Water
+			rate = 100
+		}
+	}
+}
+
+RECIPE
+{
+	name = "Steamed Copper Sheet"
+	plural =  "s"
+
+	PRODUCTION
+	{
+		PART
+		{
+			name = "Copper Sheet"
+			rate = 22.5
+		}
+	}
+	DEMANDS
+	{
+		PART
+		{
+			name = "Copper Ingot"
+			rate = 22.5
+		}
+		PART
+		{
+			name = Water
+			rate = 22.5
+		}
 	}
 }
 
@@ -1860,6 +1946,43 @@ RECIPE
 			name = Concrete
 			plural = ""
 			rate = 9
+		}
+	}
+}
+
+RECIPE
+{
+	name = "Infused Uranium Cell"
+	plural = s
+	PRODUCTION
+	{
+		PART
+		{
+			name = "Encased Uranium Cell"
+			rate = 17.5
+		}
+	}
+	DEMANDS
+	{
+		PART
+		{
+			name = "Uranium Pellet"
+			rate = 20
+		}
+		PART
+		{
+			name = Sulfur
+			rate = 22.5
+		}
+		PART
+		{
+			name = Silica
+			rate = 22.5
+		}
+		PART
+		{
+			name = Quickwire
+			rate = 37.5
 		}
 	}
 }
