--- a/TestSpec.cfg
+++ b/TestSpec.cfg
@@ -4,15 +4,16 @@
 	{
 		ignoreCosts = true
 		ignorePower = true
+		minOCRate = 0.5
 		maxOCRate = 1.0
 		rcpMarginFactor = 0.01
 		allowDemandPreference = true
-		ignoreRecipes = "Casted Screw", "Caterium Wire"
+		ignoreRecipes = "Caterium Wire"
 	}
 
 	PART_TARGET
 	{
-		name = "Reinforced Iron Plate"
+		name = "Adaptive Control Unit"
 	}
 	PART_TARGET
 	{
@@ -20,14 +21,14 @@
 	}
 	PART_TARGET
 	{
-		name = "Automated Wiring"
+		name = "Modular Engine"
 	}
 	PART_TARGET
 	{
-		name = "Modular Frame"
+		name = "Heavy Modular Frame"
 	}
 	PART_TARGET
 	{
-		name = "Rotor"
+		name = "Computer"
 	}
 }
